--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "NODE_ENV='production' react-scripts build",
+    "prebuild": " react-scripts build",
+    "build": "NODE_ENV='production' npm run prebuild",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
