--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "start": "react-scripts start",
     "prebuild": " react-scripts build",
-    "build": "NODE_ENV='production' npm run prebuild",
+    "build": "REACT_APP_ENV='production' npm run prebuild",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
