--- a/package.json
+++ b/package.json
@@ -3,18 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "cross-env": "^5.2.0",
     "express": "^4.16.4",
     "node-uuid": "^1.4.8",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
-    "react-scripts": "2.1.5",
+    "react-scripts": "^2.1.8",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "cross-env REACT_APP_ENV=production react-scripts start",
     "prebuild": " react-scripts build",
-    "build": "REACT_APP_ENV=production npm run prebuild",
+    "build": "cross-env REACT_APP_ENV=production npm run prebuild",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
