--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "start": "cross-env REACT_APP_ENV=development react-scripts start node index.js",
     "prebuild": " react-scripts build",
-    "build": "cross-env REACT_APP_ENV=production npm run prebuild node index.js",
+    "build": "cross-env REACT_APP_ENV=production npm run prebuild",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
