--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-dom": "^16.8.3",
     "react-scripts": "^2.1.8",
     "socket.io": "^2.2.0",
-    "socket.io-client": "^2.2.0"
+    "socket.io-client": "^2.2.0",
+    "socket.io-stream": "^0.9.1"
   },
   "scripts": {
     "start": "react-scripts start",
