--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "body-parser": "^1.18.3",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
+    "mongoose": "^5.5.3",
     "node-uuid": "^1.4.8",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
